--- a/src/main/webapp/resources/css/detail.css
+++ b/src/main/webapp/resources/css/detail.css
@@ -7,8 +7,8 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: 'Nanum Gothic', sans-serif;
     list-style: none;
+    font-family: 'Nanum Gothic', sans-serif;
 }
 
 .wrapper {
@@ -63,65 +63,78 @@ nav .content {
     display: flex;
 }
 
-
-.text {
-	margin-top:2px;
-	background: url('../img/main.png');
-	background-repeat: no-repeat;
-    display: flex;
-    width: 100%;
-    height: 300px;
-    justify-content: center;
-    flex-shrink: 0;
-    display: flex;
+body #board-catetory {
+    margin: 10vh 35vh 0;
+    border-bottom: solid 2px #b8b8b8;
 }
 
-.text span {
-    margin-top: 70px;
-    text-align: center;
-    color:#162c74;
-    font-size: 35px;
-    font-style: normal;
+#board-catetory p {
+    padding: 5px;
+    font-size: 30px;
     font-weight: 800;
-    line-height: 60px;
+    color: #0E1B48;
 }
 
-.row {
-    display: flex;
-    margin: 0 200px;
+body #table-container {
+    margin: 3vh 25vh;
+}
+
+.contentD,
+.reply {
+    margin: 2vh 35vh;
     text-align: center;
-    justify-content: center;
-
 }
 
-.column {
-    flex: 50%;
-    margin: 0 170px;
-    padding: 16px;
-    height: 400px;
-    background: #fcf4fc;
-    border-radius: 18px;
-    opacity: 0.9;
+.contentD p:nth-child(1) {
+    font-size: 2.5vh;
+    font-weight: bold;
 }
 
-.column a img {
-    margin-top: 70px;
-    height: 150px;
-    width: auto;
+.contentD p:nth-child(3) {
+    font-size: medium;
+    font-weight: bold;
 }
 
-button {
-    margin-top: 50px;
-    padding: 15px 50px;
-    border: none;
-    background: #0E1B48;
-    font: inherit;
+.contentD p:nth-child(4) {
+    text-align: right;
+}
+
+.contentD p:nth-child(5) {
+    margin-top: 3vh;
+    text-align: left;
+    line-height: 3vh;
+}
+
+.btn {
+    margin-top: 5vh;
+    text-align: right;
+    margin-right: 35vh;
+    margin-bottom: 5vh;
+}
+
+.btn a {
     color: #fff;
-    cursor: pointer;
-    border-radius: 47px;
+    background-color: #0E1B48;
+    padding: 1vh 3vh;
+    border-radius: 5px;
+    font-weight: bold;
 }
 
+.reply {
+    text-align: justify;
+}
 
+.reply p:nth-child(1) {
+    font-size: 2vh;
+    font-weight: bold;
+
+}
+.reply p:nth-child(3){
+    line-height: 3vh;
+}
+.reply p:nth-child(5) {
+    text-align: right;
+}
 
 .footer {
     /* position: fixed;
@@ -129,7 +142,7 @@ button {
     margin-top: 10vh;
     width: 100%;
     height: 15vh;
-    background-color:#f4fcfc;
+    background-color: rgb(240, 230, 240);
     display: flex;
     align-items: center;
     text-align: center;
